# DavissApp

./: .gitignore  CMakeLists.txt  README.md
docs/Modules/Depot/: Categories.xlsx
include/controllers/: databasecontroller.h  depocontroller.h  settingscontroller.h
lib/fmt/src/: format.cc
src/: Application.cpp  Application.h  CMakeLists.txt  image.qrc  main.cpp  main.qml  other.qrc  qml.qrc
src/Common/: AndroidUtils.cpp  AndroidUtils.h  ImageConverter.cpp  ImageConverter.h  UserSession.cpp  UserSession.h  Utility.h
src/Controllers/: AppController.cpp  AppController.h  DepotController.cpp  DepotController.h  JobController.cpp  JobController.h  ModulesController.cpp  ModulesController.h  UserController.cpp  UserController.h
src/Controllers/Depot/: DepotController.cpp  DepotController.h
src/Managements/: LocalManagement.cpp  LocalManagement.h  LocalManagement_impl.h  SqlLocalManagement.cpp  SqlLocalManagement.h  WebManagement.cpp  WebManagement.h  WebManagement_impl.h
src/Managements/AppManagement/: AppManagement.cpp  AppManagement.h  AppTable.h
src/Managements/Depot/: DepotManager.cpp  DepotManager.h  DepotTable.h
src/Managements/DepotManager/: DepotManager.cpp  DepotManager.h  DepotTable.h
src/Managements/JobManagement/: JobHistoryTable.h  JobManagement.cpp  JobManagement.h
src/Managements/SyncManagement/: SyncManagement.cpp  SyncManagement.h  SyncTable.h
src/Managements/UserManagement/: UserManagement.cpp  UserManagement.h  UserTable.h
src/Models/: App.h  DepotItem.h  JobHistory.h  Module.h  Sync.h  Time.h  User.h
src/Models/Depot/: Item.h
src/Parsers/Depot/: ParameterParser.cpp  ParameterParser.h
src/Resources/: DatabaseManager.cpp  DatabaseManager.h  DatabaseStatus.cpp  DatabaseStatus.h  ILocalDbExecutor.cpp  ILocalDbExecutor.h  IWebDbExecutor.cpp  IWebDbExecutor.h
src/Resources/Mysql/: WebMySqlDbExecutor.cpp  WebMySqlDbExecutor.h
src/Resources/PhpApiCrud/: WebDatabaseManager.cpp  WebDatabaseManager.h
src/Resources/Sqlite/: SqliteDatabaseManager.cpp  SqliteDatabaseManager.h  SqliteDbExecutor.cpp  SqliteDbExecutor.h
src/Services/: Synchronizer.cpp  Synchronizer.h  SynchronizerListenerList.h  SynchronizerPublisherList.h
src/Templates/: CRUDManagement.h  CRUDRepository.h  Publisher.h  QueryRespository.h  Singleton.h  SynchronizerHandler.h
src/android/: AndroidManifest.xml
src/android/src/pl/daviss/davissapp/: QSharePathResolver.java
src/controllers/: databasecontroller.cpp  depocontroller.cpp  settingscontroller.cpp
src/ui/: iconsMap.js  qtquickcontrols2.conf
src/ui/Controllers/: UserController.js
src/ui/Custom/: Avatar.qml  Button.qml  CustomBorder.qml  Dialog.qml  Icon.qml  MenuActionDelegate.qml  MenuBoolDelegate.qml  MenuDelegate.qml  MenuOwnerDelegate.qml  MenuSpacerDelegate.qml  MenuStringDelegate.qml  MenuSubViewDelegate.qml  MenuSwitchDelegate.qml  String.qml  StringField.qml  Switch.qml  TopBarMenu.qml
src/ui/Modules/Depot/: AddCard.qml  CategorySelector.qml  MainView.qml
src/ui/Modules/Desktop/: Desktop.qml  ModuleIcon.qml
src/ui/Modules/Job/: HistoryView.qml  Job.qml  MainView.qml  SummaryView.qml
src/ui/Modules/Settings/: Settings.qml
src/ui/Modules/Settings/Appearance/: AppearanceMenu.qml
src/ui/Modules/Settings/Network/: NetworkMenu.qml
src/ui/Modules/Settings/User/: DialogAvatar.qml  DialogName.qml  DialogPassword.qml  LoginView.qml  LoginViewSummary.qml  UserSettings.qml
src/ui/Styles/: StylesApp.qml  StylesButton.qml  StylesMenuDelegate.qml  StylesStringField.qml  StylesSwitch.qml
ui/: image.qrc  qml.qrc
ui/qml/: main.qml
ui/qml/myComponents/: ToolBar_m.qml  User_m.qml
ui/qml/view/: depo.qml  depo_search.qml  depo_treeView.qml  menu.qml  settings.qml  settingsInfoView.qml
